--- a/themes/foundation/store/templates/layout/base.twig
+++ b/themes/foundation/store/templates/layout/base.twig
@@ -7,14 +7,14 @@
         'pageCanonicalUrl': block('pageCanonicalUrl')
     } %}
 </head>
-<body>
+<body class="zk-body">
     {% include '@store/layout/parts/header.twig' %}
-    {% include '@store/layout/parts/flash-messages.twig' %}
-    {% include '@store/layout/parts/breadcrumbs.twig' %}
-    <div class="zk-body">
+    <main class="zk-main-content">
+        {% include '@store/layout/parts/base-modal.twig' %}
+        {% include '@store/layout/parts/flash-messages.twig' %}
+        {% include '@store/layout/parts/breadcrumbs.twig' %}
         {% block content %}{% endblock %}
-    </div>
-    {% include '@store/layout/parts/base-modal.twig' %}
+    </main>
     {% include '@store/layout/parts/footer.twig' %}
     {% include '@store/layout/parts/javascript.twig' %}
     
