--- a/themes/foundation/store/templates/layout/parts/footer.twig
+++ b/themes/foundation/store/templates/layout/parts/footer.twig
@@ -1,6 +1,9 @@
-<div class="row">
-    <div class="column">
-        <a href="{{ routeUrl('page.terms') }}">Terms of Use</a> | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
-        {# TODO: SITE_COPY #}
+<footer class="zk-footer">
+    <div class="row">
+        <div class="column">
+            <a href="{{ routeUrl('page.terms') }}">Terms of Use</a> |
+            <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
+            {# TODO: SITE_COPY #}
+        </div>
     </div>
-</div>
+</footer>
