--- a/themes/foundation/store/scss/main.scss
+++ b/themes/foundation/store/scss/main.scss
@@ -1,4 +1,5 @@
 @import "settings";
 @import "vendor/foundation-sites";
 
-@import "admin/product/edit-product";
+@import "layout/base";
+@import "layout/topbar";
