--- a/themes/foundation/store/templates/layout/parts/footer-checkout.twig
+++ b/themes/foundation/store/templates/layout/parts/footer-checkout.twig
@@ -1,9 +1,9 @@
-<div class="row">
-    <div class="column">
-        <div id="checkout-footer">
-            <a href="{{ routeUrl('page.terms') }}">Terms of Use</a>
-            | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
+<footer id="zk-footer">
+    <div class="row">
+        <div class="column">
+            <a href="{{ routeUrl('page.terms') }}">Terms of Use</a> |
+            <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
             {# @TODO: <?=SITE_COPY?> #}
         </div>
     </div>
-</div>
+</footer>
