--- a/themes/foundation/store/scss/layout/_base.scss
+++ b/themes/foundation/store/scss/layout/_base.scss
@@ -1,30 +1,26 @@
-%flex-column {
-    display: flex;
-    flex-direction: column;
-}
-
 html {
     height: 100%;
     width: 100%;
 }
 
-.zk-body {
-    width: 100%;
-    @extend %flex-column;
+.zk-body,
+.zk-menu,
+.zk-main-content,
+.zk-footer {
+    display: flex;
+    flex-direction: column;
 }
 
-.zk-menu {
-    @extend %flex-column;
+.zk-body {
+    width: 100%;
 }
 
 .zk-main-content {
-    @extend %flex-column;
     flex: 1;
     width: 100%;
 }
 
 .zk-footer {
-    @extend %flex-column;
     min-height: 50px;
     justify-content: center;
 }
