--- a/themes/foundation/store/templates/layout/parts/header.twig
+++ b/themes/foundation/store/templates/layout/parts/header.twig
@@ -34,6 +34,12 @@
                 <li>
                     <a href="#">Products</a>
                 </li>
+                <li>
+                    <a href="#">Tags</a>
+                </li>
+                <li>
+                    <a href="#">Categories</a>
+                </li>
             </ul>
         </div>
         <div class="top-bar-right">
