--- a/themes/bootstrap/store/templates/layout/parts/header.twig
+++ b/themes/bootstrap/store/templates/layout/parts/header.twig
@@ -10,7 +10,11 @@
                 <ul class="nav navbar-nav navbar-right text-center">
                     {% if user is not empty %}
                         <li>
-                            <a href="{{ routeUrl('logout') }}">Sign Out</a>
+                            <form action="{{ routeUrl('user.logout') }}"
+                                  method="post">
+                                {{ form.csrf() }}
+                                <button type="submit" class="btn btn-link navbar-btn">Sign Out</button>
+                            </form>
                         </li>
                         <li class="divider-vertical hidden-xs"></li>
                         <li>
