--- a/themes/foundation/admin/templates/layout/parts/header.twig
+++ b/themes/foundation/admin/templates/layout/parts/header.twig
@@ -49,7 +49,13 @@
     <div class="top-bar-right">
         <ul class="dropdown menu">
             <li><a href="{{ routeUrl('home') }}">Store Front</a></li>
-            <li><a href="{{ routeUrl('logout') }}">Sign Out</a></li>
+            <li>
+                <form action="{{ routeUrl('admin.logout') }}"
+                      method="post">
+                    {{ form.csrf() }}
+                    <button type="submit" class="btn btn-link">Sign Out</button>
+                </form>
+            </li>
         </ul>
     </div>
 </div>
