More layout cleanup.

--- a/themes/foundation/store/scss/layout/_topbar.scss
+++ b/themes/foundation/store/scss/layout/_topbar.scss
@@ -1,5 +1,13 @@
-.zk-topbar-brand {
-  position: relative;
-  top: -6px;
-  padding: 0 !important;
-}
+//.zk-topbar-search {
+//  padding-bottom: 0;
+//}
+//
+//.zk-topbar-brand {
+//  position: relative;
+//  top: -6px;
+//  padding: 0 !important;
+//}
+//
+//.zk-topbar-menu {
+//  padding-top: 0;
+//}
