--- a/themes/foundation/store/templates/layout/parts/head.twig
+++ b/themes/foundation/store/templates/layout/parts/head.twig
@@ -13,4 +13,4 @@
 {% endif %}
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-<link rel="stylesheet" href="{{ assetUrl('foundation', 'store', 'css/app.css') }}">
+<link rel="stylesheet" href="{{ assetUrl('foundation', 'store', 'css/app.package.css') }}">
