--- a/themes/foundation/store/templates/cart/show.twig
+++ b/themes/foundation/store/templates/cart/show.twig
@@ -5,121 +5,125 @@
 {% block pageTitle %}Shopping Cart{% endblock %}
 
 {% block content %}
-    <div id="cart">
-        <div class="container">
-            {% if cart.cartItems is empty %}
-                <div class="row">
-                    <div class="columns">
-                        {% include '@store/cart/parts/empty-cart.twig' %}
-                    </div>
+
+    <div id="zk-shopping-cart">
+        <update-quantity></update-quantity>
+        {% if cart.cartItems is empty %}
+            <div class="row">
+                <div class="columns">
+                    {% include '@store/cart/parts/empty-cart.twig' %}
                 </div>
-            {% else %}
-                <div class="row">
-                    <div class="small-9 columns">
-                        <div class="row">
-                            <div class="columns">
-                                <h2>Shopping Cart</h2>
-                                <table class="table">
-                                    <thead>
+            </div>
+        {% else %}
+
+            <div class="row">
+                <div class="small-9 columns">
+                    <div class="row">
+                        <div class="column">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th colspan="2">Item</th>
+                                    <th>QTY</th>
+                                    <th class="text-right hidden-xs">Unit Price</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for cartItem in cart.cartItems %}
                                     <tr>
-                                        <th colspan="2">Item</th>
-                                        <th>QTY</th>
-                                        <th class="text-right hidden-xs">Unit Price</th>
-                                        <th>Total</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for cartItem in cart.cartItems %}
-                                        <tr>
-                                            <td class="cart-product-image">
-                                                <a href="{{ productUrl(cartItem.product) }}">
-                                                    <img src="{{ productImageUrl(cartItem.product) }}" width="110" height="110" />
-                                                </a>
-                                            </td>
-                                            <td>
-                                                <a href="{{ productUrl(cartItem.product) }}">
-                                                    <span class="cart-product-title">{{ cartItem.product.name }}</span>
-                                                </a>
+                                        <td class="cart-product-image">
+                                            <a href="{{ productUrl(cartItem.product) }}">
+                                                <img src="{{ productImageUrl(cartItem.product) }}" width="110" height="110" />
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="{{ productUrl(cartItem.product) }}">
+                                                <span class="cart-product-title">{{ cartItem.product.name }}</span>
+                                            </a>
 
-                                                <div class="hidden-sm text-muted">
-                                                    <small>{{ cartItem.fullSku }}</small>
-                                                </div>
+                                            <div class="hidden-sm text-muted">
+                                                <small>{{ cartItem.fullSku }}</small>
+                                            </div>
 
-                                                {% include '@store/cart/parts/cart-item-options.twig' with {'cartItem': cartItem } only %}
-                                            </td>
-                                            <td>
-                                                <form action="{{ routeUrl('cart.update-quantity') }}" method="post" role="form">
-                                                    {{ form.csrf() }}
-                                                    {{ form.hidden('id', cartItem.id.hex) }}
-                                                    <div style="width: 120px">
-                                                        <div class="input-group input-group-sm">
-                                                            <input class="form-control update-qty" type="text" name="quantity" value="{{ cartItem.quantity }}" size="3" maxlength="3">
-                                                            <span class="input-group-btn">
-                                                                <button type="submit" class="button secondary">Update</button>
-                                                            </span>
+                                            {% include '@store/cart/parts/cart-item-options.twig' with {'cartItem': cartItem } only %}
+
+
+                                            <form action={{ routeUrl('cart.delete-item') }} method="post" role="form">
+                                                {{ form.csrf() }}
+                                                {{ form.hidden('id', cartItem.id.hex) }}
+
+                                                <button type="submit" class="button tiny alert">
+                                                    <i class="fa fa-trash"></i>
+                                                    Remove item
+                                                </button>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <form action="{{ routeUrl('cart.update-quantity') }}" method="post" role="form">
+                                                {{ form.csrf() }}
+                                                {{ form.hidden('id', cartItem.id.hex) }}
+                                                <div style="width: 120px">
+
+                                                    <div class="input-group">
+                                                        <input class="input-group-field update-qty" type="text" name="quantity" value="{{ cartItem.quantity }}" size="3" maxlength="3">
+                                                        <div class="input-group-button">
+                                                            <input type="submit" class="button" value="Update">
                                                         </div>
                                                     </div>
-                                                </form>
-                                            </td>
-                                            <td>
-                                                {% include '@admin/helper/unit-price.twig' with {'price': cartItem.price } only %}
-                                            </td>
-                                            <td>
-                                                {{ cartItem.price.quantityPrice | displayPrice }}
-                                            </td>
-                                            <td>
-                                                <form action={{ routeUrl('cart.delete-item') }} method="post" role="form">
-                                                    {{ form.csrf() }}
-                                                    {{ form.hidden('id', cartItem.id.hex) }}
-
-                                                        <button type="submit" class="button">
-                                                            <i class="fa fa-trash"></i>
-                                                            Remove item
-                                                        </button>
-                                                </form>
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
+                                                </div>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            {% include '@admin/helper/unit-price.twig' with {'price': cartItem.price } only %}
+                                        </td>
+                                        {#<td>#}
+                                        {#{{ cartItem.price.quantityPrice | displayPrice }}#}
+                                        {#</td>#}
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
                         </div>
-                        <div class="row">
-                            <div class="small-7 small-offset-5 columns">
-                                {% include '@store/cart/parts/totals.twig' %}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="small-3 columns">
-                        <div class="callout">
-                            <div id="cart-cta-box">
-                                <strong>
-                                    Total ({{ cart.totalItems }} items):
-                                    <span class="price-small">{{ cart.cartTotal.total | displayPrice }}</span>
-                                </strong>
-                                {% include '@store/helper/checkout-button.twig' only %}
-                            </div>
-
-                            {% if cart.shipmentRate.rate is not null %}
-                                {% include '@store/cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}
-                            {% endif %}
-
-                            <form action="{{ routeUrl('cart.apply-coupon') }}" method="post">
-                                {{ form.csrf() }}
-
-                                <div class="input-group">
-                                    <input type="text" class="form-control" name="coupon_code" value="" placeholder="coupon code" />
-                                    <span class="input-group-btn">
-                                        <button type="submit" class="button secondary" id="apply-coupon">apply</button>
-                                    </span>
-                                </div>
-                            </form>
+                        <div class="medium-4 medium-offset-8 column">
+                            {% include '@store/cart/parts/totals.twig' %}
                         </div>
                     </div>
                 </div>
-            {% endif %}
 
-            {% include '@store/helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
-        </div>
+                <div class="small-3 columns">
+                    <div class="callout">
+                        <div id="cart-cta-box">
+                            <strong>
+                                Total ({{ cart.totalItems }} items):
+                                <span class="price-small">{{ cart.cartTotal.total | displayPrice }}</span>
+                            </strong>
+                            {% include '@store/helper/checkout-button.twig' only %}
+                        </div>
+
+                        {% if cart.shipmentRate.rate is not null %}
+                            {% include '@store/cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}
+                        {% endif %}
+
+                        <form action="{{ routeUrl('cart.apply-coupon') }}" method="post">
+                            {{ form.csrf() }}
+
+                            <div class="input-group">
+                                <input type="text" class="input-group-field" name="coupon_code" value="" placeholder="coupon code" />
+                                <span class="input-group-button">
+                                    <button type="submit" class="button secondary" id="apply-coupon">Apply</button>
+                                </span>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+
+        {% include '@store/helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
     </div>
+
+{% endblock %}
+
+{% block extraScripts %}
+    <script src="{{ assetUrl('foundation', 'store', 'js/shopping-cart.js') }}"></script>
 {% endblock %}
