--- a/themes/foundation/store/templates/helper/checkout-button.twig
+++ b/themes/foundation/store/templates/helper/checkout-button.twig
@@ -1,3 +1,3 @@
-<a class="button" href="{{ routeUrl('checkout.pay') }}">
+<a class="button small expanded" href="{{ routeUrl('checkout.pay') }}">
     Secure Checkout <i class="fa fa-arrow-circle-right"></i>
 </a>
